--- a/views/include/_post-apartment-admin.ejs
+++ b/views/include/_post-apartment-admin.ejs
@@ -8,293 +8,144 @@
 </head>
 <body>
 <div class="formbold-main-wrapper">
- 
   <div class="formbold-form-wrapper">
-    
     <form action="/create-apartment" method="POST" enctype="multipart/form-data">
-      <div class="formbold-input-flex">
-        <input
-            type="hidden"
-            name="aid"
-            id="aid"
-            class="formbold-form-input"
-          />
-        </div>
+      <input type="hidden" name="aid" id="aid" class="formbold-form-input" />
 
-      <div class="formbold-mb-3 formbold-input-wrapp">
+      <div class="formbold-mb-3">
         <label for="title" class="formbold-form-label"> Title </label>
-        <div>
-          <input
-            type="text"
-            name="title"
-            id="title"
-            placeholder="Title"
-            class="formbold-form-input"
-          />
-        </div>
+        <input type="text" name="title" id="title" placeholder="Title" class="formbold-form-input" />
       </div>
-      
-      <div>
+
+      <div class="formbold-mb-3">
         <label for="typeOfProperty" class="formbold-form-label"> Type of Property </label>
-          <select id="typeOfProperty" class="formbold-form-input" name="typeOfProperty">
-            <option value="" disabled selected hidden>Select Type</option>
-            <option value="Apartment">Apartment</option>
-            <option value="Land">Land</option>
-            <option value="Shop">Shop</option>
-            <option value="Shop">Other</option>
+        <select id="typeOfProperty" name="typeOfProperty" class="formbold-form-input">
+          <option value="" disabled selected hidden>Select Type</option>
+          <option value="Apartment">Apartment</option>
+          <option value="Land">Land</option>
+          <option value="Shop">Shop</option>
+          <option value="Other">Other</option>
         </select>
       </div>
-      
-      <div class="formbold-mb-3 formbold-input-wrapp">
+
+      <div class="formbold-mb-3">
         <label for="price" class="formbold-form-label"> Price </label>
-        <div>
-          <input
-            type="Number"
-            name="price"
-            id="price"
-            placeholder="price"
-            class="formbold-form-input"
-          />
-        </div>
+        <input type="number" name="price" id="price" placeholder="Price" class="formbold-form-input" />
       </div>
 
-      <div>     
-        <div>
-          <label for="status" class="formbold-form-label">Status:</label>
-          <select id="status" class="formbold-form-input" name="status">
-            <option value="" disabled selected hidden>Select Status</option>
-            <option value="Sell">Sell</option>
-            <option value="Rent">Rent</option>
-            <option value="Least">Least</option>
-            <option value="Others">Others</option>
-          </select>
-        </div>
+      <div class="formbold-mb-3">
+        <label for="status" class="formbold-form-label"> Status </label>
+        <select id="status" name="status" class="formbold-form-input">
+          <option value="" disabled selected hidden>Select Status</option>
+          <option value="Sell">Sell</option>
+          <option value="Rent">Rent</option>
+          <option value="Lease">Lease</option>
+          <option value="Others">Others</option>
+        </select>
       </div>
 
-      <div>
-      <!-- Duration field initially hidden -->
-      <div id="durationField" style="display: none;">
-        <label for="duration" class="formbold-form-label">Duration:</label>
-        <select id="duration" class="formbold-form-input" name="duration">
+      <div class="formbold-mb-3" id="durationField" style="display: none;">
+        <label for="duration" class="formbold-form-label"> Duration </label>
+        <select id="duration" name="duration" class="formbold-form-input">
           <option value="" disabled selected hidden>Select Duration</option>
           <option value="/ Monthly">Monthly</option>
           <option value="/ Yearly">Yearly</option>
         </select>
       </div>
-      </div>
 
-      <div>
-        <label for="currency" class="formbold-form-label">Currency:</label>
-        <select id="currency" class="formbold-form-input" name="currency">
+      <div class="formbold-mb-3">
+        <label for="currency" class="formbold-form-label"> Currency </label>
+        <select id="currency" name="currency" class="formbold-form-input">
           <option value="" disabled selected>Select your currency</option>
           <option value="SLL">Sierra Leonean Leone (SLL)</option>
           <option value="USD">United States Dollar (USD)</option>
           <option value="GBP">British Pound Sterling (GBP)</option>
         </select>
-      </div>      
-
-      <div class="formbold-mb-3 formbold-input-wrapp">
-        <label for="phone" class="formbold-form-label"> Phone: </label>
-        <div>
-          <input
-            type="text"
-            name="phone"
-            id="phone"
-            placeholder="Phone number"
-            class="formbold-form-input"
-          />
-        </div>
       </div>
 
-      <div class="formbold-mb-3 formbold-input-wrapp">
-        <label for="location" class="formbold-form-label"> Area </label>
-        <div>
-          <select id="area" class="formbold-form-input" name="area">
-            <option value="" disabled selected hidden>Select Area</option>
-            <option value="Western Area Urban">Western Area Urban</option>
-            <option value="Western Area Urban">Western Area Rural</option>
-            <option value="Others">Others</option>
+      <div class="formbold-mb-3">
+        <label for="phone" class="formbold-form-label"> Phone </label>
+        <input type="text" name="phone" id="phone" placeholder="Phone number" class="formbold-form-input" />
+      </div>
+
+      <div class="formbold-mb-3">
+        <label for="area" class="formbold-form-label"> Area </label>
+        <select id="area" name="area" class="formbold-form-input">
+          <option value="" disabled selected hidden>Select Area</option>
+          <option value="Western Area Urban">Western Area Urban</option>
+          <option value="Western Area Rural">Western Area Rural</option>
+          <option value="Others">Others</option>
         </select>
-        </div>
       </div>
 
-      <div class="formbold-mb-3 formbold-input-wrapp">
+      <div class="formbold-mb-3">
         <label for="location" class="formbold-form-label"> Location </label>
-      <input
-      type="text"
-      name="location"
-      id="location"
-      placeholder="Location"
-      class="formbold-form-input"
-    />
-  </div>
+        <input type="text" name="location" id="location" placeholder="Location" class="formbold-form-input" />
+      </div>
 
       <div class="formbold-input-flex">
         <div>
           <label for="bedrooms" class="formbold-form-label"> Bedrooms </label>
-          <input
-            type="number"
-            name="bedrooms"
-            id="bedrooms"
-            placeholder="Bedrooms"
-            class="formbold-form-input"
-          />
+          <input type="number" name="bedrooms" id="bedrooms" placeholder="Bedrooms" class="formbold-form-input" />
         </div>
-
         <div>
           <label for="bathrooms" class="formbold-form-label"> Bathrooms </label>
-          <input
-            type="number"
-            name="bathrooms"
-            id="bathrooms"
-            placeholder="bathrooms"
-            class="formbold-form-input"
-          />
+          <input type="number" name="bathrooms" id="bathrooms" placeholder="Bathrooms" class="formbold-form-input" />
         </div>
-
       </div>
 
-      <div class="formbold-mb-3 formbold-input-wrapp">
-        <label for="negotiation" class="formbold-form-label"> Negotiation: </label>
-        <div>
-          <select id="negotiation" class="formbold-form-input" name="negotiation">
-            <option value="" disabled selected hidden>Select Negotiation</option>
-            <option value="Negotiable">Negotiable</option>
-            <option value="Non Negotiable">Non Negotiable</option>
+      <div class="formbold-mb-3">
+        <label for="negotiation" class="formbold-form-label"> Negotiation </label>
+        <select id="negotiation" name="negotiation" class="formbold-form-input">
+          <option value="" disabled selected hidden>Select Negotiation</option>
+          <option value="Negotiable">Negotiable</option>
+          <option value="Non Negotiable">Non Negotiable</option>
         </select>
-        </div>
       </div>
 
       <div class="formbold-mb-3">
         <label for="address" class="formbold-form-label"> Address </label>
-
-        <input
-          type="text"
-          name="address"
-          id="address"
-          placeholder="Street address"
-          class="formbold-form-input formbold-mb-3"
-        />
-        <input
-          type="text"
-          name="address2"
-          id="address2"
-          placeholder="Street address line 2"
-          class="formbold-form-input"
-        />
-      </div>
-
-      <div class="formbold-mb-3 formbold-input-wrapp">
-        <label for="createdBy" class="formbold-form-label"> Created by: </label>
-        <div>
-          <input
-            type="text"
-            name="createdBy"
-            value="<%= user.fullname  %>"
-            class="formbold-form-input"
-            readonly
-          />
-        </div>
+        <input type="text" name="address" id="address" placeholder="Street address" class="formbold-form-input" />
+        <input type="text" name="address2" id="address2" placeholder="Street address line 2" class="formbold-form-input" />
       </div>
 
       <div class="formbold-mb-3">
-        <label for="description" class="formbold-form-label">
-            Description
-        </label>
-        <textarea
-          rows="6"
-          name="description"
-          id="description"
-          class="formbold-form-input"
-        ></textarea>
+        <label for="createdBy" class="formbold-form-label"> Created by </label>
+        <input type="text" name="createdBy" value="<%= user.fullname %>" class="formbold-form-input" readonly />
       </div>
 
-      <!-- <div class="formbold-form-file-flex">
-        <label for="photo" class="formbold-form-label">
-          Upload Property Image
-        </label>
-        <input
-          type="file"
-          name="photo"
-          id="photo"
-          class="formbold-form-file"
-        />
-      </div> -->
+      <div class="formbold-mb-3">
+        <label for="description" class="formbold-form-label"> Description </label>
+        <textarea rows="6" name="description" id="description" class="formbold-form-input" placeholder="Decribe your property..."></textarea>
+      </div>
 
       <div class="formbold-form-file-flex">
-        <label for="photo" class="formbold-form-label">
-          Upload Property Image
-        </label>
-        <input
-          type="file"
-          name="photo"
-          id="photo"
-          class="formbold-form-file"
-          multiple
-        />
-    </div>
+        <label for="photo" class="formbold-form-label"> Upload Property Image </label>
+        <input type="file" name="photo" id="photo" class="formbold-form-file" multiple />
+      </div>
 
-     <!-- Container for file name previews -->
-     <!-- <div id="fileNameContainer" class="formbold-file-name-container"></div> -->
-
-    <button type="submit" class="formbold-btn">Create Post</button>
+      <button type="submit" class="formbold-btn">Create Post</button>
     </form>
   </div>
 </div>
 <script>
-  // Get the status select element
-  const statusSelect = document.getElementById('status');
-  // Get the duration field
-  const durationField = document.getElementById('durationField');
-
-  // Add event listener to the status select element
-  statusSelect.addEventListener('change', function() {
-    // Check if the selected value is "Rent"
-    if (statusSelect.value === 'Rent') {
-      // If "Rent" is selected, show the duration field
-      durationField.style.display = 'block';
-    } else {
-      // If any other option is selected, hide the duration field
-      durationField.style.display = 'none';
-    }
+  document.getElementById('status').addEventListener('change', function() {
+    const durationField = document.getElementById('durationField');
+    durationField.style.display = this.value === 'Rent' ? 'block' : 'none';
   });
-</script>
 
-<script>
-document.querySelector('form').addEventListener('submit', function(event) {
+  document.querySelector('form').addEventListener('submit', function(event) {
     event.preventDefault();
     const formData = new FormData(this);
 
     fetch('/create-apartment', {
-        method: 'POST',
-        body: formData
+      method: 'POST',
+      body: formData
     })
     .then(response => response.json())
-    .then(data => {
-        console.log(data);
-        // Handle the response as needed
-    })
-    .catch(error => {
-        console.error('Error1:', error);
-    });
-});
-</script>
-
-<!-- <script>
-  document.getElementById('photos').addEventListener('change', function(event) {
-    const files = event.target.files;
-    const fileNameContainer = document.getElementById('fileNameContainer');
-    fileNameContainer.innerHTML = ''; // Clear previous previews
-
-    for (let i = 0; i < files.length; i++) {
-      const file = files[i];
-
-      const fileName = document.createElement('p');
-      fileName.textContent = file.name;
-      fileNameContainer.appendChild(fileName);
-    }
+    .then(data => console.log(data))
+    .catch(error => console.error('Error:', error));
   });
-</script> -->
-
+</script>
 </body>
 </html>
