--- a/views/include/_apply-admin.ejs
+++ b/views/include/_apply-admin.ejs
@@ -107,7 +107,7 @@
       </div>
 
       <div class="formbold-mb-3">
-        <label for="address" class="formbold-form-label"> Current Address </label>
+        <label for="address" class="formbold-form-label"> Current Address: </label>
 
         <input
           type="text"
@@ -140,7 +140,7 @@
 
       <div class="formbold-mb-3">
         <label for="comments" class="formbold-form-label">
-            Comments
+            Comments:
         </label>
         <textarea
           rows="6"
