--- a/views/include/_update-apartment.ejs
+++ b/views/include/_update-apartment.ejs
@@ -20,7 +20,7 @@
     <form action="#" method="POST" enctype="multipart/form-data">
       <div class="formbold-input-flex">
         <div>
-          <label for="title" class="formbold-form-label"> Title </label>
+          <label for="title" class="formbold-form-label"> Title: </label>
           <input
             type="text"
             name="title"
@@ -31,7 +31,7 @@
         </div>
 
         <div>
-          <label for="typeOfProperty" class="formbold-form-label"> Type of Property </label>
+          <label for="typeOfProperty" class="formbold-form-label"> Type of Property: </label>
           <select id="typeOfProperty" class="formbold-form-input" name="typeOfProperty">
             <option value="Apartment">Apartment</option>
             <option value="Land">Land</option>
@@ -56,7 +56,7 @@
         </div>
 
         <div>
-            <label for="status" class="formbold-form-label"> Status </label>
+            <label for="status" class="formbold-form-label"> Status: </label>
             <select id="status" class="formbold-form-input" name="status">
               <option value="Sell">Sell</option>
               <option value="Rent">Rent</option>
@@ -80,7 +80,7 @@
       </div>
 
       <div class="formbold-mb-3 formbold-input-wrapp">
-        <label for="location" class="formbold-form-label"> Location </label>
+        <label for="location" class="formbold-form-label"> Location: </label>
 
         <div>
           <select id="area" class="formbold-form-input" name="area">
@@ -100,7 +100,7 @@
 
       <div class="formbold-input-flex">
         <div>
-          <label for="bedrooms" class="formbold-form-label"> Bedrooms </label>
+          <label for="bedrooms" class="formbold-form-label"> Bedrooms: </label>
           <input
             type="number"
             name="bedrooms"
@@ -111,7 +111,7 @@
         </div>
 
         <div>
-          <label for="bathrooms" class="formbold-form-label"> Bathrooms </label>
+          <label for="bathrooms" class="formbold-form-label"> Bathrooms: </label>
           <input
             type="number"
             name="bathrooms"
@@ -124,7 +124,7 @@
       </div>
 
       <div class="formbold-mb-3 formbold-input-wrapp">
-        <label for="avaliablity" class="formbold-form-label"> Avaliablity </label>
+        <label for="avaliablity" class="formbold-form-label"> Avaliablity: </label>
           <select id="availabilty" class="formbold-form-input" name="availabilty">
             <option value="Avaliable">Avaliable</option>
             <option value="Not Availabile">Not Availabile</option>
@@ -145,7 +145,7 @@
       </div> -->
 
       <div class="formbold-mb-3">
-        <label for="address" class="formbold-form-label"> Address </label>
+        <label for="address" class="formbold-form-label"> Address: </label>
 
         <input
           type="text"
@@ -165,7 +165,7 @@
 
       <div class="formbold-mb-3">
         <label for="description" class="formbold-form-label">
-            Description
+            Description:
         </label>
         <textarea
           rows="6"
