--- a/views/include/_apply.ejs
+++ b/views/include/_apply.ejs
@@ -62,7 +62,7 @@
       </div>
 
       <div class="formbold-mb-3">
-        <label for="address" class="formbold-form-label">Current Address </label>
+        <label for="address" class="formbold-form-label">Current Address: </label>
 
         <input
           type="text"
@@ -95,7 +95,7 @@
 
       <div class="formbold-mb-3">
         <label for="comments" class="formbold-form-label">
-            Comments
+            Comments:
         </label>
         <textarea
           rows="6"
