--- a/views/include/_post-apartment-admin.ejs
+++ b/views/include/_post-apartment-admin.ejs
@@ -13,12 +13,12 @@
       <input type="hidden" name="aid" id="aid" class="formbold-form-input" />
 
       <div class="formbold-mb-3">
-        <label for="title" class="formbold-form-label"> Title </label>
+        <label for="title" class="formbold-form-label"> Title: </label>
         <input type="text" name="title" id="title" placeholder="Title" class="formbold-form-input" />
       </div>
 
       <div class="formbold-mb-3">
-        <label for="typeOfProperty" class="formbold-form-label"> Type of Property </label>
+        <label for="typeOfProperty" class="formbold-form-label"> Type of Property: </label>
         <select id="typeOfProperty" name="typeOfProperty" class="formbold-form-input">
           <option value="" disabled selected hidden>Select Type</option>
           <option value="Apartment">Apartment</option>
@@ -29,12 +29,12 @@
       </div>
 
       <div class="formbold-mb-3">
-        <label for="price" class="formbold-form-label"> Price </label>
+        <label for="price" class="formbold-form-label"> Price: </label>
         <input type="number" name="price" id="price" placeholder="Price" class="formbold-form-input" />
       </div>
 
       <div class="formbold-mb-3">
-        <label for="status" class="formbold-form-label"> Status </label>
+        <label for="status" class="formbold-form-label"> Status: </label>
         <select id="status" name="status" class="formbold-form-input">
           <option value="" disabled selected hidden>Select Status</option>
           <option value="Sell">Sell</option>
@@ -45,7 +45,7 @@
       </div>
 
       <div class="formbold-mb-3" id="durationField" style="display: none;">
-        <label for="duration" class="formbold-form-label"> Duration </label>
+        <label for="duration" class="formbold-form-label"> Duration: </label>
         <select id="duration" name="duration" class="formbold-form-input">
           <option value="" disabled selected hidden>Select Duration</option>
           <option value="/ Monthly">Monthly</option>
@@ -54,7 +54,7 @@
       </div>
 
       <div class="formbold-mb-3">
-        <label for="currency" class="formbold-form-label"> Currency </label>
+        <label for="currency" class="formbold-form-label"> Currency: </label>
         <select id="currency" name="currency" class="formbold-form-input">
           <option value="" disabled selected>Select your currency</option>
           <option value="SLL">Sierra Leonean Leone (SLL)</option>
@@ -64,12 +64,12 @@
       </div>
 
       <div class="formbold-mb-3">
-        <label for="phone" class="formbold-form-label"> Phone </label>
+        <label for="phone" class="formbold-form-label"> Phone: </label>
         <input type="text" name="phone" id="phone" placeholder="Phone number" class="formbold-form-input" />
       </div>
 
       <div class="formbold-mb-3">
-        <label for="area" class="formbold-form-label"> Area </label>
+        <label for="area" class="formbold-form-label"> Area: </label>
         <select id="area" name="area" class="formbold-form-input">
           <option value="" disabled selected hidden>Select Area</option>
           <option value="Western Area Urban">Western Area Urban</option>
@@ -79,23 +79,23 @@
       </div>
 
       <div class="formbold-mb-3">
-        <label for="location" class="formbold-form-label"> Location </label>
+        <label for="location" class="formbold-form-label"> Location: </label>
         <input type="text" name="location" id="location" placeholder="Location" class="formbold-form-input" />
       </div>
 
       <div class="formbold-input-flex">
         <div>
-          <label for="bedrooms" class="formbold-form-label"> Bedrooms </label>
+          <label for="bedrooms" class="formbold-form-label"> Bedrooms: </label>
           <input type="number" name="bedrooms" id="bedrooms" placeholder="Bedrooms" class="formbold-form-input" />
         </div>
         <div>
-          <label for="bathrooms" class="formbold-form-label"> Bathrooms </label>
+          <label for="bathrooms" class="formbold-form-label"> Bathrooms: </label>
           <input type="number" name="bathrooms" id="bathrooms" placeholder="Bathrooms" class="formbold-form-input" />
         </div>
       </div>
 
       <div class="formbold-mb-3">
-        <label for="negotiation" class="formbold-form-label"> Negotiation </label>
+        <label for="negotiation" class="formbold-form-label"> Negotiation: </label>
         <select id="negotiation" name="negotiation" class="formbold-form-input">
           <option value="" disabled selected hidden>Select Negotiation</option>
           <option value="Negotiable">Negotiable</option>
@@ -104,18 +104,18 @@
       </div>
 
       <div class="formbold-mb-3">
-        <label for="address" class="formbold-form-label"> Address </label>
+        <label for="address" class="formbold-form-label"> Address: </label>
         <input type="text" name="address" id="address" placeholder="Street address" class="formbold-form-input" />
         <input type="text" name="address2" id="address2" placeholder="Street address line 2" class="formbold-form-input" />
       </div>
 
       <div class="formbold-mb-3">
-        <label for="createdBy" class="formbold-form-label"> Created by </label>
+        <label for="createdBy" class="formbold-form-label"> Created By: </label>
         <input type="text" name="createdBy" value="<%= user.fullname %>" class="formbold-form-input" readonly />
       </div>
 
       <div class="formbold-mb-3">
-        <label for="description" class="formbold-form-label"> Description </label>
+        <label for="description" class="formbold-form-label"> Description: </label>
         <textarea rows="6" name="description" id="description" class="formbold-form-input" placeholder="Decribe your property..."></textarea>
       </div>
 
