--- a/views/include/_update-admin-apartment.ejs
+++ b/views/include/_update-admin-apartment.ejs
@@ -87,7 +87,7 @@
     <form action="/edit-admin-apartment/<%= apartment._id %>?_method=PATCH" method="POST">
       <div class="formbold-input-flex">
       <div>
-        <label for="aid" class="formbold-form-label"> AID </label>
+        <label for="aid" class="formbold-form-label"> AID: </label>
         <input
           type="text"
           name="aid"
@@ -100,7 +100,7 @@
 
       <div class="formbold-input-flex">
         <div>
-          <label for="title" class="formbold-form-label"> Title </label>
+          <label for="title" class="formbold-form-label"> Title: </label>
           <input
             type="text"
             name="title"
@@ -111,7 +111,7 @@
         </div>
 
         <div>
-          <label for="typeOfProperty" class="formbold-form-label"> Type of Property </label>
+          <label for="typeOfProperty" class="formbold-form-label"> Type of Property: </label>
           <select id="typeOfProperty" class="formbold-form-input" name="typeOfProperty">
             <option value="Apartment" <%= apartment.typeOfProperty === 'Apartment' ? 'selected' : '' %>>Apartment</option>
             <option value="Land" <%= apartment.typeOfProperty === 'Land' ? 'selected' : '' %>>Land</option>
@@ -136,7 +136,7 @@
         </div>
 
         <div>
-          <label for="status" class="formbold-form-label"> Status </label>
+          <label for="status" class="formbold-form-label"> Status: </label>
           <select id="status" class="formbold-form-input" name="status">
             <option value="" disabled selected hidden>Select Status</option>
             <option value="Sell" <%= apartment.status === 'Sell' ? 'selected' : '' %>>Sell</option>
@@ -162,7 +162,7 @@
       </div>
 
       <div class="formbold-mb-3 formbold-input-wrapp">
-        <label for="location" class="formbold-form-label"> Location </label>
+        <label for="location" class="formbold-form-label"> Location: </label>
 
         <div>
           <select id="area" class="formbold-form-input" name="area">
@@ -184,7 +184,7 @@
 
       <div class="formbold-input-flex">
         <div>
-          <label for="bedrooms" class="formbold-form-label"> Bedrooms </label>
+          <label for="bedrooms" class="formbold-form-label"> Bedrooms: </label>
           <input
             type="number"
             name="bedrooms"
@@ -195,7 +195,7 @@
         </div>
 
         <div>
-          <label for="bathrooms" class="formbold-form-label"> Bathrooms </label>
+          <label for="bathrooms" class="formbold-form-label"> Bathrooms: </label>
           <input
             type="number"
             name="bathrooms"
@@ -220,7 +220,7 @@
 
       <div class="formbold-input-flex">
         <div>
-          <label for="avaliablity" class="formbold-form-label"> Avaliablity </label>
+          <label for="avaliablity" class="formbold-form-label"> Avaliablity: </label>
           <select id="availabilty" class="formbold-form-input" name="availabilty">
             <option value="" disabled selected hidden>Select Avaliablity</option>
             <option value="Avaliable">Avaliable</option>
@@ -228,7 +228,7 @@
         </select>
         </div>
           <div>
-            <label for="sponsored" class="formbold-form-label"> Sponsored </label>
+            <label for="sponsored" class="formbold-form-label"> Sponsored: </label>
             <select id="sponsored" class="formbold-form-input" name="sponsored">
               <option value="" disabled selected hidden>Select Sponsored</option>
               <option value="false">False</option>
@@ -238,7 +238,7 @@
       </div>
 
       <div class="formbold-mb-3">
-        <label for="address" class="formbold-form-label"> Address </label>
+        <label for="address" class="formbold-form-label"> Address: </label>
 
         <input
           type="text"
@@ -258,7 +258,7 @@
       </div> 
       
       <div class="formbold-mb-3">
-        <label for="createdBy" class="formbold-form-label"> Created By </label>
+        <label for="createdBy" class="formbold-form-label"> Created By: </label>
 
         <input
           type="text"
