--- a/views/success/contacts.ejs
+++ b/views/success/contacts.ejs
@@ -81,13 +81,14 @@ a:hover::after {
             <p>We will get back to you as soon as possible. Your message has been received...</p>
         </div>        
         <div class="add-another-reception">
-            <!-- <a href="" onclick="goBack()">Go Back</a> -->
+            <a href="/go-back" id="go-back-link">Go Back</a>
         </div>
     </div>
 </body>
 <script>
-    function goBack() {
+    document.getElementById('go-back-link').addEventListener('click', function(event) {
+        event.preventDefault();
         window.history.back();
-    }
+    });
 </script>
 </html>
