--- a/views/success/expenses-update.ejs
+++ b/views/success/expenses-update.ejs
@@ -60,13 +60,14 @@
         </div>
         <div class="add-another-reception">
             <!-- <a href="admin-home">Go Back</a> -->
-            <a href="#" onclick="goBack()">Go Back</a>
+            <a href="/go-back" id="go-back-link">Go Back</a>
         </div>
     </div>
 </body>
 <script>
-    function goBack() {
+    document.getElementById('go-back-link').addEventListener('click', function(event) {
+        event.preventDefault();
         window.history.back();
-    }
+    });
 </script>
 </html>
