--- a/views/success/expenses.ejs
+++ b/views/success/expenses.ejs
@@ -82,13 +82,14 @@ a:hover::after {
             <p>Expenses form has been created successfully</p>
         </div>        
         <div class="add-another-reception">
-            <a href="#" onclick="goBack()">Go Back</a>
+            <a href="/go-back" id="go-back-link">Go Back</a>
         </div>
     </div>
 </body>
 <script>
-    function goBack() {
+    document.getElementById('go-back-link').addEventListener('click', function(event) {
+        event.preventDefault();
         window.history.back();
-    }
+    });
 </script>
 </html>
