--- a/views/include/_footer.ejs
+++ b/views/include/_footer.ejs
@@ -161,16 +161,16 @@
               <a href="#" class="footer-link">Wish List</a>
             </li>
 
-            <li>
+            <!-- <li>
               <a href="#" class="footer-link">Order tracking</a>
-            </li>
+            </li> -->
 
             <li>
               <a href="#" class="footer-link">FAQ</a>
             </li>
 
             <li>
-              <a href="#" class="footer-link">Contact us</a>
+              <a href="/contact" class="footer-link">Contact us</a>
             </li>
 
           </ul>
