--- a/views/include/_contact.ejs
+++ b/views/include/_contact.ejs
@@ -15,7 +15,7 @@
   <div class="formbold-form-wrapper">
     <pre style="text-align: center; font: 0.6em sans-serif;">
       Send us a message for more information. 
-      Make sure you input your correct informations, <br>
+      Make sure you input your correct informations,
       we will get back to you as soon as possible.
     </pre>
 <form action="/contact" method="POST">
