--- a/views/acc-dashboard.ejs
+++ b/views/acc-dashboard.ejs
@@ -39,7 +39,7 @@
         </div>
         <div class="header-right">
           <span class="material-icons-outlined">notifications</span>
-          <span class="material-icons-outlined">email</span>
+          <span class="material-icons-outlined"><a href="/all-messages">chat</a></span>
           <span class="material-icons-outlined"><a href="/admin-home">account_circle</a></span>
           <span class="material-icons-outlined"><a href="/logout">logout</a></span>
         </div>
@@ -57,8 +57,8 @@
 
         <ul class="sidebar-list">
           <li class="sidebar-list-item">
-            <a href="/account" target="_blank">
-              <span class="material-icons-outlined">dashboard</span> Dashboard
+            <a href="/all-messages" target="_blank">
+              <span class="material-icons-outlined">chat</span> Messages
             </a>
           </li>
           <li class="sidebar-list-item">
