--- a/views/administrator.ejs
+++ b/views/administrator.ejs
@@ -39,7 +39,7 @@
         </div>
         <div class="header-right">
           <span class="material-icons-outlined">notifications</span>
-          <span class="material-icons-outlined">email</span>
+          <span class="material-icons-outlined"><a href="/all-messages">chat</a></span>
           <span class="material-icons-outlined"><a href="/admin-home">account_circle</a></span>
           <span class="material-icons-outlined"><a href="/logout">logout</a></span>
         </div>
