--- a/views/include/_all-application.ejs
+++ b/views/include/_all-application.ejs
@@ -94,6 +94,7 @@
                 <th>AID</th>
                 <th>Apartment Location</th>
                 <th>Address</th>
+                <th>Assigned Staff</th>
                 <th>Actions</th> <!-- New column for actions -->
             </tr>
             </thead>
@@ -106,6 +107,8 @@
                 <td class="hover"><%= apply.applyAid %></td>
                 <td class="hover"><%= apply.location %></td>
                 <td class="hover"><%= apply.address %></td>
+                <td class="hover"><%= apply.assignedStaff %></td>
+
                
                 <td class="hover px-6 py-4 whitespace-nowrap">
                     <!-- Add icons with links to your delete, view, and update routes -->
