--- a/views/include/_edit-application.ejs
+++ b/views/include/_edit-application.ejs
@@ -176,6 +176,19 @@
               class="formbold-form-input"
             ><%= apply.comments %></textarea>
           </div>
+
+          <div class="formbold-mb-3 formbold-input-wrapp">
+            <label for="assignedStaff" class="formbold-form-label"> Assigned Staff: </label>
+            <div>
+              <input
+                type="text"
+                name="assignedStaff"
+                id="assignedStaff"
+                value="<%= apply.assignedStaff %>"
+                class="formbold-form-input"
+              />
+            </div>
+          </div>
           
   
         <button type="submit" class="formbold-btn">Done</button>
