--- a/views/include/_footer.ejs
+++ b/views/include/_footer.ejs
@@ -183,9 +183,7 @@
     <div class="footer-bottom">
       <div class="container">
 
-        <p class="copyright">
-          &copy; 2024 <a href="#">Homehub</a>. All Rights Reserved || Logged in as <a href="#"><%= user ? user.role : '' %></a> - <%= user ? user.fullname : '' %> || <a href="/logout">Logout</a>
-        </p>
+        <p class="copyright"> &copy; 2024 <a href="#">Homehub</a>. All Rights Reserved || Logged in as <a href="#"><%= user ? user.role : '' %> </a> - <%= user ? user.fullname : '' %> || <a href="/logout">Logout</a></p>
 
       </div>
     </div>
