--- a/views/contact-admin.ejs
+++ b/views/contact-admin.ejs
@@ -7,7 +7,7 @@
 <!-- /include contact -->
 
 <!-- include cta -->
-<%- include('include/_cta') %>
+<%- include('include/_cta-admin') %>
 <!-- /include cta -->
 
 <!-- include footer -->
