--- a/views/guest-page.ejs
+++ b/views/guest-page.ejs
@@ -429,9 +429,29 @@
   <%- include('include/_blog-guest', { apartments: apartments }) %>
   <!-- /include blog -->
   
-  <!-- include cta -->
-  <%- include('include/_cta') %>
-  <!-- /include cta -->
+  <section class="cta">
+    <div class="container">
+
+      <div class="cta-card">
+        <div class="card-content">
+          <h2 class="h2 card-title">Looking for a dream home?</h2>
+
+          <p class="card-text">We can help you realize your dream of a new home</p>
+        </div>
+        <a href="/login">
+        <button class="btn cta-btn">
+          <span>Explore Properties</span>
+
+          <ion-icon name="arrow-forward-outline"></ion-icon>
+        </button></a>
+      </div>
+
+    </div>
+  </section>
+
+
+</article>
+</main>
   
   
   <!-- include footer -->
