--- a/views/include/_header-admin.ejs
+++ b/views/include/_header-admin.ejs
@@ -167,9 +167,9 @@
 
         <div class="header-bottom-actions">
 
-          <button class="header-bottom-actions-btn" aria-label="Search">
+          <button class="header-bottom-actions-btn" aria-label="Search"><a href="/search-admin">
             <ion-icon name="search-outline"></ion-icon>
-
+          </a>
             <span>Search</span>
           </button>
 
