--- a/views/include/_header.ejs
+++ b/views/include/_header.ejs
@@ -177,9 +177,9 @@
 
         <div class="header-bottom-actions">
 
-          <button class="header-bottom-actions-btn" aria-label="Search">
+          <button class="header-bottom-actions-btn" aria-label="Search"><a href="/search">
             <ion-icon name="search-outline"></ion-icon>
-
+          </a>
             <span>Search</span>
           </button>
 
