--- a/views/include/_apply-admin.ejs
+++ b/views/include/_apply-admin.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Apartment Form</title>
+  <title>Admin Apartment Form</title>
     <!-- 
     - custom css link
   -->
