--- a/views/include/_registration-process-statement.ejs
+++ b/views/include/_registration-process-statement.ejs
@@ -81,7 +81,7 @@
         <p>6.3. If you have any questions or encounter any issues during the registration process, please contact our customer support team for assistance.</p><br>
 
         <h3></h3>
-        <p>Thank you for choosing JORO HOUSING AGENCY. We look forward to helping you find your dream property or connect with the perfect tenant or buyer.
+        <p>Thank you for choosing HOMEHUB AGENCY. We look forward to helping you find your dream property or connect with the perfect tenant or buyer.
 
         </p><br>         
     </div>
