--- a/views/include/_terms-condition.ejs
+++ b/views/include/_terms-condition.ejs
@@ -124,7 +124,9 @@
         <p>8.1. HOMEHUB AGENCY may amend these Terms and Conditions at any time by posting the amended terms on the application. 
             Continued use of the application after such amendments constitutes acceptance of the new terms.</p><br>
         
-        <pre>By using the HOMEHUB AGENCY application, you acknowledge that you have read, understood, and agreed to these Terms and Conditions.</pre>
+        <p>By using the HOMEHUB AGENCY application, 
+          you acknowledge that you have read, understood,
+           and agreed to these Terms and Conditions.</p>
     </div>
     </div>
   </div>
