--- a/views/administrator.ejs
+++ b/views/administrator.ejs
@@ -87,7 +87,12 @@
             </a>
           </li>
           <li class="sidebar-list-item">
-            <a href="#" target="_blank">
+            <a href="/availability" target="_blank">
+              <span class="material-icons-outlined">event_available</span> Avaliability
+            </a>
+          </li>
+          <li class="sidebar-list-item">
+            <a href="/update-password/<%= user._id %>" target="_blank">
               <span class="material-icons-outlined">settings</span> Settings
             </a>
           </li>
