--- a/views/update-password.ejs
+++ b/views/update-password.ejs
@@ -74,7 +74,13 @@
             <a href="/administrator" class="header-top-link">
               <ion-icon name=""></ion-icon>
 
-              <span><%= greeting %> Administrator | <%= user ? user.username : '' %></span>
+              <span><%= greeting %> Administrator | <%= user ? user.username : '' %>
+                <% if (sudo) { %>
+                  <p>(Owner)</p>
+              <% } else { %>
+                  <p></p> <!-- Empty paragraph -->
+              <% } %>
+              </span>
             </a>
           </li>
 
