--- a/views/include/_availability.ejs
+++ b/views/include/_availability.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sponsorship Apartment</title>
+    <title>Availabile Apartment</title>
   <link rel="stylesheet" href="./css/users.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
@@ -33,11 +33,11 @@
         background-color: rgb(7, 252, 85);
     }
   
-    .sponsored-blue-bg {
+    .availabilty-blue-bg {
         background-color: rgb(7, 207, 252);
     }
   
-    .sponsored-grey-bg {
+    .availabilty-grey-bg {
         background-color: rgb(162, 159, 159);
     }
   
@@ -118,7 +118,7 @@
     }
   </style>
 <body>
-    <h2>Sponsorship Apartments</h2>
+    <h2>Apartment Availability</h2>
     <div class="table-wrapper">
         
 <!-- Search by AID -->
@@ -149,30 +149,29 @@
                 <th>Phone No.</th>
                 <th>Location</th>
                 <th>Address</th>
+                <th>Availability</th>
                 <!-- <th>Negotiation</th>
-                <th>Avaliablity</th>
                 <th>Verification</th> -->
-                <th>Sponsored</th>
+                <!-- <th>Sponsored</th> -->
                 <th>Actions</th> <!-- New column for actions -->
             </tr>
             </thead>
             <tbody>
                 <% apartments.forEach(apartment => { %>
             <tr>
-                <td class="hover">AID<%= apartment.aid %></td>
+                <td class="hover"><%= 'AID' + apartment.aid %></td>
                 <td class="hover"><%= apartment.createdBy %></td>
                 <td class="hover"><%= apartment.title %></td>
                 <td class="hover"><%= apartment.phone %></td>
                 <td class="hover"><%= apartment.location %></td>
                 <td class="hover"><%= apartment.address %></td>
-                <td class="hover <%= apartment.sponsored === 'true' ? 'sponsored-blue-bg' : (apartment.sponsored === 'false' ? 'sponsored-grey-bg' : 'status-default-bg') %>"> 
-                    <%= apartment.sponsored %>
+                <td class="hover availabilty-blue-bg"><%= apartment.availabilty %>
                 </td>
                 <td class="hover px-6 py-4 whitespace-nowrap">
                     <!-- Add icons with links to your delete, view, and update routes -->
-                    <a href="/edit-sponsorship/<%= apartment._id %>"><i class="fas fa-edit text-green-500 cursor-pointer"></i></a>
+                    <a href="/edit-availability/<%= apartment._id %>"><i class="fas fa-edit text-green-500 cursor-pointer"></i></a>
                     <a href="#" onclick="deleteApartmentById('<%= apartment._id %>')"><i class="fas fa-trash-alt text-red-500 cursor-pointer"></i></a>
-                    <a href="/view-apartmet-details/<%= apartment._id %>"><i class="fas fa-eye text-blue-500 cursor-pointer mx-2"></i></a>
+                    <a href="#"><i class="fas fa-eye text-blue-500 cursor-pointer mx-2"></i></a>
                 </td>
                  
             </tr>
